# cpp-math

./: CMakeLists.txt
cpp-math/: vector.hpp
cpp-math/detail/: config.hpp
test/: testing.cpp  vector_test.cpp
