cmake_minimum_required (VERSION 2.6)
SET(PROJECT_NAME )
project (cpp-vector-math)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -g -pthread -DBOOST_TEST_DYN_LINK")

set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_LIBS OFF)
SET(BOOST_ROOT C:/externals/boost_1_55_0)
SET(BOOST_INCLUDEDIR ${BOOST_ROOT})
SET(BOOST_LIBRARYDIR C:/externals/boost_1_55_0/lib64-msvc-11_0)
find_package(BOOST COMPONENTS system unit_test_framework REQUIRED)

INCLUDE_DIRECTORIES( ${BOOST_INCLUDEDIR} )
INCLUDE_DIRECTORIES( cpp-math )

file(GLOB_RECURSE VECTOR_H src "*.h")

AUX_SOURCE_DIRECTORY(test VECTOR_TEST)
LINK_DIRECTORIES(${BOOST_LIBRARYDIR})

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )

ADD_EXECUTABLE(unittest ${VECTOR_TEST})
TARGET_LINK_LIBRARIES(unittest ${Boost_LIBRARIES})

file(GLOB BOOST_DLLS "${BOOST_LIBRARYDIR}/" "${BOOST_LIBRARYDIR}/*.dll")
file(COPY ${BOOST_DLLS} DESTINATION ${CMAKE_BINARY_DIR})